--- a/.github/workflows/docker-build-deploy.yaml
+++ b/.github/workflows/docker-build-deploy.yaml
@@ -30,3 +30,9 @@ jobs:
         run: |
           source venv/bin/activate
           python main.py
+
+      - name: Upload scan report
+        uses: actions/upload-artifact@v4
+        with:
+          name: scan_report
+          path: reports/scan_report.json
