--- a/.github/workflows/docker-build-deploy.yaml
+++ b/.github/workflows/docker-build-deploy.yaml
@@ -25,14 +25,15 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-
+      
       - name: Run scan
         run: |
           source venv/bin/activate
-          python main.py
+          python asset-scanner/scanner.py --root . --out $RUNNER_TEMP/scan_report.json --no-console --ext .py .md .txt
 
-      - name: Upload scan report
-        uses: actions/upload-artifact@v4
-        with:
-          name: scan_report
-          path: reports/scan_report.json
+
+      ##- name: Upload scan report
+      ##  uses: actions/upload-artifact@v4
+      ##  with:
+       ##   name: scan_report
+      ##   path: reports/scan_report.json
