--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Faker==37.1.0
 fonttools==4.57.0
 fpdf2==2.8.3
 lxml==5.4.0
-numpy==1.26.4
+numpy
 opencv-python==4.12.0.88
 packaging==25.0
 pandas==2.2.3
